# FlowerEmbedding

./: Dockerfile  README.md  jupyter_train.ipynb  pyproject.toml
app/: app.py  model.py
checkpoints/: embedded.pth
utils/: adan_sf.py  dataloader.py  download_dataset.py  mamba_out.py  tensor_util.py  train.py
