[project]
name = "venv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kagglehub>=0.3.10",
    "matplotlib>=3.9.4",
    "numpy~=1.23.0",
    "pepeline>=0.3.14",
    "pyvips>=2.2.3",
    "pyvips-binary>=8.16.0",
    "timm>=1.0.15",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
]
